fix: z-index on burger

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -18,6 +18,9 @@ header {
   
   @media (max-width: 767px) {
     position: absolute;
+    z-index: 10;
+    opacity: 0;
+    visibility: hidden;
     overflow: hidden;
     top: 0;
     right: 0;
@@ -27,6 +30,8 @@ header {
   
   &_active {
     background-color: rgba(0, 0, 0, 0.4);
+    opacity: 1;
+    visibility: visible;
   }
 }
 
