--- a/src/styles/base/_common.scss
+++ b/src/styles/base/_common.scss
@@ -109,11 +109,3 @@ h4 {
   }
 
 }
-
-@media screen and (max-width: 500px) {
-
-  .content {
-    padding: 0;
-  }
-
-}
